# deidentification

./: .gitignore  Dockerfile  README.md  docker-compose-prod.yaml  docker-compose.yaml  env.sh  pyproject.toml  serve.py  vllm_serve.sh
cfgs/: serve.yaml
deid/: async_funcs.py  cache.py  deid_collections.py  exceptions.py  llm_api.py  llm_pydantic.py  llm_tokens.py  logs.py  long_context_tools.py  main.py  serve.py
deid/prompts/: example1.yaml
exps/main/example/: cfg.yaml
exps/main/example/data/: _test2.txt  hr_candidate1.txt
exps/main/example/prompts/: deid.txt  eval.txt
prompts/example/: deid.txt  eval.txt
tests/integration/: example.yaml  test_serve.py
tests/integration/deid/: test_llm_api.py  test_main.py
